fix participant name problem
