# src/model/activityModel.js
@@ -5,12 +5,14 @@ const { DataTypes } = require('sequelize');
 
 
 // const ActivityParticipantStatus = sequelize.define('ActivityParticipantStatus')
-const ActivityParticipantStatus = sequelize.define('ActivityParticipantStatus', {
-    participant_name: {
-        type: Sequelize.STRING, // Assuming the status is a string, adjust the data type as needed
-        allowNull: true // Adjust this as per your requirement
-    }
-});
+const ActivityParticipantStatus = sequelize.define('ActivityParticipantStatus', 
+// {
+//     participant_name: {
+//         type: Sequelize.STRING, // Assuming the status is a string, adjust the data type as needed
+//         allowNull: true // Adjust this as per your requirement
+//     }
+// }
+);
 /* =========================== Activities Table =================================== */
 
 /**
@@ -76,6 +78,7 @@ User.hasMany(Activities, { as: "CreatedActivities", foreignKey: "created_user_id
 
 Activities.belongsToMany(User, { as: "Participants", through: "ActivityParticipantStatus", foreignKey: "joined_activities" });
 User.belongsToMany(Activities, { as: "JoinedActivities", through: "ActivityParticipantStatus", foreignKey: "participants" });
+ActivityParticipantStatus.belongsTo(User, { foreignKey: 'participants' });
 
 /**
  * TABLE: LongTermActivities
